# sonetto-patch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
launcher/: Cargo.toml
launcher/src/: main.rs
sonetto/: Cargo.toml
sonetto/src/: interceptor.rs  lib.rs  util.rs
sonetto/src/modules/: mod.rs  network.rs  socket.rs
