[workspace]
members = ["launcher", "sonetto"]
resolver = "2"

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
windows = "0.58.0"
anyhow = "1.0.81"
ilhook = "2.1.0"
lazy_static = "1.4.0"
libloading = "0.8.3"



[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimization level 3.
codegen-units = 1 # Maximum size reduction optimizations.
